<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addObservationFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/observationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_temperature"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/observationTitle" />

        <EditText
            android:id="@+id/temperatureEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_humidity"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/temperatureEditText" />

        <EditText
            android:id="@+id/humidityEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

        <TextView
            android:id="@+id/airPressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_air_pressure"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/humidityEditText" />

        <EditText
            android:id="@+id/airPressureEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/airPressureTextView" />

        <TextView
            android:id="@+id/openWordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_open_word"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/airPressureEditText" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/submit_observation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/fetchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/fetch_values"
            app:layout_constraintBottom_toBottomOf="@+id/submitButton"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/openWordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/openWordTextView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="174dp"
            android:layout_height="176dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openWordEditText"
            app:layout_constraintVertical_bias="0.507"
            tools:src="@mipmap/ic_launcher" />

        <ImageButton
            android:id="@+id/btnTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="77dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="@+id/submitButton"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>