<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ViewObservationFragment">

        <TextView
            android:id="@+id/viewObservationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/observation_placeholder"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/viewTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_temperature"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewObservationTitle" />

        <TextView
            android:id="@+id/observationTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/viewTemperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/viewTemperatureTextView" />

        <TextView
            android:id="@+id/viewHumidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_humidity"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/viewTemperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/observationTemperature" />

        <TextView
            android:id="@+id/observationHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/viewTemperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/viewHumidityTextView" />

        <TextView
            android:id="@+id/viewAirpressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_air_pressure"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/viewTemperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/observationHumidity" />

        <TextView
            android:id="@+id/observationAirpressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/viewTemperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/viewAirpressureTextView" />

        <TextView
            android:id="@+id/viewOpenWordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_observation_open_word"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/viewTemperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/observationAirpressure" />

        <TextView
            android:id="@+id/observationOpenWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/viewTemperatureTextView"
            app:layout_constraintTop_toBottomOf="@+id/viewOpenWordTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>